@@ -14,7 +14,7 @@ endif
 
 ifeq ($(subdir),stdlib)
 sysdep_routines += mul_1-vis3 mul_1-generic addmul_1-vis3 submul_1-vis3 \
-		   add_n-vis3 sub_n-vis3 
+		   add_n-vis3 sub_n-vis3 sub_n-generic
 endif
 
 ifeq ($(subdir),math)
